add section details

--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,10 @@
           <i class="icon-postback icon"></i>
           <span>Postback</span></a>
         <hr>
-        <a href="#"> <i class="icon-wallet icon"></i><span>$1,500.00</span>
-          <i class="icon-arrow-down-small icon"></i></a>
+        <a href="#"> <i class="icon-wallet icon"></i><span>$1,500.00
+            <i class="icon-arrow-down-small icon"></i></span></a>
         <a href="#"> <i class="icon-notification icon"></i> </a>
-        <a href="#"> <i class="icon-arrow-down-small icon"></i><span>Leonardo Di Carpatka</span></a>
+        <a href="#"> <i class="icon-profile icon"></i><span>Leonardo Di Carpatka</span></a>
         <a href="#"> <i class="icon-quit icon"></i></a>
         <hr>
         <div id="manager_box">
@@ -268,7 +268,7 @@
             <div class="personal_data_wrapper">
               <div class="field">
                 <label>Name</label>
-                <input type="text" name="user-name">
+                <input type="text" name="user-name" placeholder="Username">
               </div>
               <div class="field">
                 <label>Surname</label>
@@ -276,11 +276,11 @@
               </div>
               <div class="field">
                 <label>E-mail</label>
-                <input type="text" name="e-mail">
+                <input type="email" name="e-mail" required>
               </div>
               <div class="field">
                 <label>Phone number</label>
-                <input type="text" name="phon-number">
+                <input type="tel" name="phon-number">
               </div>
             </div>
             <div class="personal_data_wrapper">
@@ -299,14 +299,14 @@
             </div>
             <div class="personal_data_wrapper">
               <div class="field">
-                <label>wallet</label>
+                <label>Wallet</label>
                 <input type="text" name="wallet">
               </div>
             </div>
             <div class="personal_data_wrapper">
               <div class="field">
                 <label>Password</label>
-                <input type="text" name="Password">
+                <input type="password" name="Password">
               </div>
               <div class="field">
                 <label>Repeat</label>
@@ -318,6 +318,143 @@
         </form>
 
 
+      </section>
+      <!-- personal details -->
+      <section class="details" id="details">
+        <div class="section_header">
+          <h1>Details</h1>
+        </div>
+        <div class="details__wrapper">
+          <div class="dates_form_wrraper">
+            <input type="date" class="select">
+            <input type="date" class="pick">
+            <button class="button__refresh"><i class="icon-refresh icon"></i></button>
+          </div>
+          <div class="scroll-wrapper">
+            <table>
+              <thead>
+                <tr>
+                  <th>Tracker name</th>
+                  <th>Initialed date</th>
+                  <th>Visit</th>
+                  <th>Unique</th>
+                  <th>Signups</th>
+                  <th>FTD</th>
+                  <th>Depositors</th>
+                  <th>Deposits($)</th>
+                  <th>Payouts($)</th>
+                  <th>Turnover</th>
+                  <th>Deal</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>aff/sam_test</td>
+                  <td>17/04/05 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/leo_test</td>
+                  <td>15/08/02 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/sam_test</td>
+                  <td>17/04/05 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/leo_test</td>
+                  <td>15/08/02 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/sam_test</td>
+                  <td>17/04/05 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/leo_test</td>
+                  <td>15/08/02 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/sam_test</td>
+                  <td>17/04/05 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+                <tr>
+                  <td>aff/leo_test</td>
+                  <td>15/08/02 (12:45)</td>
+                  <td>235</td>
+                  <td>448</td>
+                  <td>84</td>
+                  <td>8</td>
+                  <td>3</td>
+                  <td>34,485.00</td>
+                  <td>485.00</td>
+                  <td>45.00</td>
+                  <td>cpl(200)</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </section>
     </div>
   </div>
