--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
         <div class="dates_form_wrraper">
           <input type="date" id="select" class="date_picker">
           <input type="date" id="pick" class="date_choice">
-          <button class="button__refresh"><i class="icon-refresh icon"></i></button>
+          <button class="button__orange"><i class="icon-refresh icon"></i></button>
         </div>
         <div class="table_wrapper">
           <div class="table">
@@ -159,7 +159,7 @@
           <div class="dates_form_wrraper">
             <input type="date" class="date_choice">
             <input type="date" class="date_choice">
-            <button class="button__refresh"><i class="icon-refresh icon"></i></button>
+            <button class="button__orange"><i class="icon-refresh icon"></i></button>
           </div>
           <div class="scroll-wrapper">
             <table>
@@ -491,7 +491,7 @@
           <div class="dates_form_wrraper">
             <input type="date" class="date_choice">
             <input type="date" class="date_choice">
-            <button class="button__refresh"><i class="icon-refresh icon"></i></button>
+            <button class="button__orange"><i class="icon-refresh icon"></i></button>
           </div>
           <div class="scroll-wrapper">
             <table>
