--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-      <div class="modal_wrapper">
+      <div class="modal_wrapper message"><i class="icon-message"></i>
         <input type="text" placeholder="write your message">
         <button class="js--close-modal button__orange">Send</button>
       </div>
@@ -147,7 +147,7 @@
         </div>
         <div class="chart_statistic_wrapper">
           <h3>Earning chart</h3>
-        <canvas id="myChart"></canvas>
+          <canvas id="myChart"></canvas>
         </div>
       </section>
       <!-- details -->
