--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="display:blok; padding: 40px;">
   <!-- hamburger -->
   <button class="hamburger">
     <span class="hamburger__box">
@@ -23,11 +23,21 @@
     </span>
   </button>
   <hr>
-
   <button class="button__orange">Button orange</button>
-
   <hr>
-  <input type="date" class="date_picker">
+  <input type=date class=date_choice>
+  <hr>
+  <i class="icon-details"></i>
+  <i class="icon-arrow-down-small"></i>
+  <i class="icon-personaldata"></i>
+  <i class="icon-notification"></i>
+  <i class="icon-quit"></i>
+  <i class="icon-links"></i>
+  <i class="icon-login"></i>
+  <i class="icon-calendar"></i>
+  <i class="icon-message"></i>
+  <i class="icon-url"></i>
+  <i class="icon-logo"></i>
   <hr>
   <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
   <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
